Classe de fechamento

--- a/app/src/main/res/layout/dialogo_confirmar.xml
+++ b/app/src/main/res/layout/dialogo_confirmar.xml
@@ -6,60 +6,81 @@
     android:layout_width="match_parent"
     android:id="@+id/dialog_confirmar_layout"
     android:layout_height="match_parent"
-    android:background="@color/colorBackgroundFundo"
+    android:background="@color/colorBackgroundPrimary"
     android:theme="@style/AppTheme">
 
-    <TextView
-        android:id="@+id/textDialogoTitulo"
+    <android.support.v7.widget.CardView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Título"
-        app:layout_constraintBottom_toTopOf="@+id/textDialogoMensagem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textDialogoMensagem"
-        android:layout_width="0dp"
-        android:layout_height="84dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="Mensagem"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="90dp" />
-
-    <ImageButton
-        android:id="@+id/imgButtonDialogoConfirmar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/imgButtonDialogoCancelar"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textDialogoMensagem"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/baseline_check_white_48" />
-
-    <ImageButton
-        android:id="@+id/imgButtonDialogoCancelar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textDialogoMensagem"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/baseline_cancel_white_48" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.01999998">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp">
+
+            <TextView
+                android:id="@+id/textDialogoMensagem"
+                android:layout_width="0dp"
+                android:layout_height="84dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="2dp"
+                android:text="Mensagem"
+                android:textAlignment="center"
+                android:textColor="@color/colorSecondary"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.100000024" />
+
+            <ImageButton
+                android:id="@+id/imgButtonDialogoConfirmar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="2dp"
+                android:background="@color/colorButtonFundoServico"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/imgButtonDialogoCancelar"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textDialogoMensagem"
+                app:layout_constraintVertical_bias="0.0"
+                app:srcCompat="@drawable/baseline_check_white_48" />
+
+            <ImageButton
+                android:id="@+id/imgButtonDialogoCancelar"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="2dp"
+                android:background="@color/colorButtonFundoServico"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/imgButtonDialogoConfirmar"
+                app:layout_constraintTop_toBottomOf="@+id/textDialogoMensagem"
+                app:layout_constraintVertical_bias="0.0"
+                app:srcCompat="@drawable/baseline_cancel_white_48" />
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v7.widget.CardView>
+
 </android.support.constraint.ConstraintLayout>
