--- a/app/src/main/res/layout/cards_servico_prestado_detalhe_layout.xml
+++ b/app/src/main/res/layout/cards_servico_prestado_detalhe_layout.xml
@@ -24,7 +24,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cards_servicoPrestado"
         android:layout_width="0dp"
-        android:layout_height="237dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="1dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="1dp"
@@ -46,7 +46,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="255dp"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
@@ -153,7 +153,7 @@
                 android:layout_marginTop="2dp"
                 android:layout_marginBottom="2dp"
                 android:padding="2dp"
-                android:text="Valor do serviço"
+                android:text="Valor do item serviço"
                 android:textAlignment="center"
                 android:textColor="@color/colorSecondary"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -212,7 +212,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/imgButtonDeletarItemServico"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textValorCobradoDoServico"
+                    app:layout_constraintTop_toBottomOf="@+id/textValorDoDescontoDoItem"
                     app:srcCompat="@drawable/baseline_check_white_48" />
 
                 <ImageButton
@@ -227,7 +227,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imgButtonDetalhesServicoPrestado"
-                    app:layout_constraintTop_toBottomOf="@+id/textValorCobradoDoServico"
+                    app:layout_constraintTop_toBottomOf="@+id/textValorDoDescontoDoItem"
                     app:srcCompat="@drawable/baseline_clear_white_48" />
 
                 <EditText
