--- a/app/src/main/res/layout/cards_servico_prestado_detalhe_layout.xml
+++ b/app/src/main/res/layout/cards_servico_prestado_detalhe_layout.xml
@@ -86,6 +86,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorBackgroundPrimary"
                 android:gravity="left"
                 android:orientation="horizontal">
 
@@ -105,18 +106,20 @@
                     android:id="@+id/textPrecoItemServicoPrestadorDetalhe"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
+                    android:layout_marginLeft="20dp"
                     android:layout_marginTop="2dp"
                     android:layout_marginRight="2dp"
                     android:layout_marginBottom="2dp"
                     android:text="Valor do item"
                     android:textAlignment="viewStart"
-                    android:textColor="@color/colorTituloPrimary" />
+                    android:textColor="@color/colorSecondary"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorBackgroundPrimary"
                 android:gravity="left"
                 android:orientation="horizontal">
 
@@ -136,18 +139,20 @@
                     android:id="@+id/textValorCobradoDoServico"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
+                    android:layout_marginLeft="4dp"
                     android:layout_marginTop="2dp"
                     android:layout_marginRight="2dp"
                     android:layout_marginBottom="2dp"
                     android:text="Valor do item"
                     android:textAlignment="viewStart"
-                    android:textColor="@color/colorTituloPrimary" />
+                    android:textColor="@color/colorSecondary"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorBackgroundPrimary"
                 android:gravity="left"
                 android:orientation="horizontal">
 
@@ -167,18 +172,20 @@
                     android:id="@+id/textValorDoDescontoDetalhe"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
+                    android:layout_marginLeft="11dp"
                     android:layout_marginTop="2dp"
                     android:layout_marginRight="2dp"
                     android:layout_marginBottom="2dp"
                     android:text="Valor desconto"
                     android:textAlignment="viewStart"
-                    android:textColor="@color/colorTituloPrimary" />
+                    android:textColor="@color/colorSecondary"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorBackgroundPrimary"
                 android:gravity="left"
                 android:orientation="horizontal">
 
@@ -196,23 +203,22 @@
 
                 <TextView
                     android:id="@+id/textValorItemCobradoDetalhe"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="2dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="19dp"
                     android:layout_marginTop="2dp"
                     android:layout_marginRight="2dp"
                     android:layout_marginBottom="2dp"
                     android:text="Valor cobrado"
-                    android:textAlignment="viewStart"
-                    android:textColor="@color/colorTituloPrimary" />
+                    android:textAlignment="center"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
                 android:layout_marginTop="4dp"
-                android:layout_marginRight="2dp"
                 android:layout_marginBottom="2dp"
                 android:background="@color/colorBackgroundPrimary"
                 android:gravity="center"
@@ -248,7 +254,7 @@
                     android:paddingRight="10dp"
                     android:text="Quantidade"
                     android:textAlignment="center"
-                    android:textColor="@color/colorSecondary"
+                    android:textColor="@color/colorPrimaryDark"
                     android:textStyle="bold" />
 
                 <ImageButton
@@ -266,10 +272,9 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="126dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_margin="2dp"
-                android:background="@color/colorBackgroundFundoFundoBotao"
+                android:background="@color/colorBackgroundFundo"
                 android:gravity="center_horizontal"
                 android:orientation="horizontal">
 
@@ -309,35 +314,16 @@
                     android:id="@+id/imgButtonDetalhesServicoPrestado"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="50dp"
-                    android:layout_marginBottom="8dp"
                     android:background="@color/colorButtonFundoServico"
                     android:textAlignment="center"
                     android:textDirection="ltr"
+
                     android:tooltipText="Corfimar o desconto"
-                    
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/imgButtonDeletarItemServico"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textValorDoDescontoDoItem"
                     app:srcCompat="@drawable/baseline_check_white_48" />
-
-                <ImageButton
-                    android:id="@+id/imgButtonDeletarItemServico"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="50dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
-                    android:background="@color/colorButtonFundoServico"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/imgButtonDetalhesServicoPrestado"
-                    app:layout_constraintTop_toBottomOf="@+id/textValorDoDescontoDoItem"
-                    app:srcCompat="@drawable/baseline_clear_white_48" />
 
                 <EditText
                     android:id="@+id/textValorDoDescontoDoItem"
