--- a/app/src/main/res/layout/activity_detalhe_servico_prestado.xml
+++ b/app/src/main/res/layout/activity_detalhe_servico_prestado.xml
@@ -43,8 +43,10 @@
                 android:id="@+id/linearLayout4"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="1dp"
                 android:layout_marginTop="2dp"
-                android:background="@color/colorBackgroundFundo"
+                android:layout_marginEnd="1dp"
+                android:background="@color/colorBackgroundFundoFundoBotao"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -58,12 +60,13 @@
                     android:layout_height="40dp"
                     android:layout_marginLeft="4dp"
                     android:layout_marginRight="2dp"
-                    android:text="Descrição" />
+                    android:text="Descrição"
+                    android:textAlignment="center" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@color/colorBackgroundFundo"
+                    android:background="@color/colorBackgroundFundoFundoBotao"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
